# ball_tracker

./: .gitignore  CLAUDE.md  README.md  debug_camera.py  features.md  main.py  pyproject.toml  test_camera.py  verify_fix.py
.specify/memory/: constitution.md
config/: pitch_config.json  rules_config.json  stump_config.json  wall_boundary.json  wide_config.json
history/prompts/001-cricket-ball-tracker-mvp/: 001-cricket-ball-tracker-mvp.implementation-complete.2026-02-15.md  001-generate-tasks-for-cricket-ball-tracker-mvp.tasks.prompt.md
history/prompts/constitution/: 0001-cricket-ball-tracker-constitution-created.constitution.prompt.md
history/prompts/cricket-ball-tracker-mvp/: 0001-write-mvp-feature-spec.spec.prompt.md  0002-clarify-mvp-spec-ambiguities.spec.prompt.md  0003-second-clarify-pass-no-gaps.spec.prompt.md  0004-create-implementation-plan.plan.prompt.md
specs/001-cricket-ball-tracker-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/calibration/: __init__.py  pitch_calibrator.py
src/config/: __init__.py  config_manager.py
src/decision_engine/: __init__.py  caught_behind_engine.py  lbw_engine.py  wide_engine.py
src/detection/: __init__.py  ball_detector.py  stump_detector.py
src/models/: __init__.py  ball_detection.py  calibration.py  decisions.py  delivery.py  session_config.py
src/replay/: __init__.py  replay_buffer.py  replay_renderer.py
src/tracking/: __init__.py  ball_tracker.py  delivery_segmenter.py
src/ui/: __init__.py  app.py
src/ui/components/: __init__.py
(+14 files in other folders)
