[project]
name = "ball-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filterpy>=1.4.5",
    "numpy>=1.24.0",
    "onnxruntime>=1.16.0",
    "opencv-python>=4.8.0",
    "streamlit>=1.33.0",
    "streamlit-drawable-canvas>=0.9.3",
    "torch>=2.0.0",
    "ultralytics>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
